refactor: webpack4->5, 目录调整, 添加eslint

--- a/package.json
+++ b/package.json
@@ -1,58 +1,52 @@
 {
   "name": "image_client_private",
-  "version": "1.0.0",
-  "description": "",
+  "version": "2.0.0",
+  "description": "image collect",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "cross-env NODE_ENV=production webpack --config ./builder/webpack.conf.prod.js --progress --mode production",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config=./builder/webpack.conf.dev.js --mode development",
-    "loc-dev": "cross-env NODE_ENV=location webpack-dev-server --config=./builder/webpack.conf.dev.js --mode development",
+    "dev": "cross-env NODE_ENV=development webpack serve --mode development --config=./builder/webpack.dev.conf.js",
+    "loc-dev": "cross-env NODE_ENV=location webpack serve --config=./builder/webpack.dev.conf.js --mode development",
     "devh": "nodemon ./builder/test.js"
   },
   "author": "republix",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/runtime": "^7.3.4",
-    "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0-beta.2",
-    "@vue/babel-preset-jsx": "^1.0.0-beta.2",
-    "babel": "^6.23.0",
-    "babel-eslint": "^10.0.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "compression-webpack-plugin": "^3.1.0",
-    "cross-env": "^5.2.0",
-    "css-loader": "^2.1.0",
-    "eslint": "^5.14.1",
-    "eslint-loader": "^2.1.2",
-    "file-loader": "^3.0.1",
-    "html-webpack-harddisk-plugin": "^1.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.14.1",
-    "nodemon": "^2.0.3",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "stylelint": "^9.10.1",
-    "stylelint-webpack-plugin": "^0.10.5",
-    "url-loader": "^1.1.2",
-    "vue": "^2.6.7",
-    "vue-loader": "^15.6.4",
-    "vue-router": "^3.0.2",
-    "vue-template-compiler": "^2.6.7",
-    "vuex": "^3.1.0",
-    "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
-  },
   "dependencies": {
-    "mini-css-extract-plugin": "^0.5.0",
-    "superagent": "^4.1.0"
+    "superagent": "^6.1.0",
+    "vue": "^2.6.12",
+    "vue-router": "^3.5.1",
+    "vue-template-compiler": "^2.6.12",
+    "vuex": "^3.6.2",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
+    "@vue/babel-preset-jsx": "^1.2.4",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "compression-webpack-plugin": "^7.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.1",
+    "eslint-loader": "^4.0.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-harddisk-plugin": "^1.0.2",
+    "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.3.2",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "stylelint-webpack-plugin": "^2.1.1",
+    "url-loader": "^4.1.1",
+    "vue-loader": "^15.9.5",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.5.0"
   }
 }
