--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,6 @@
     "plugins": [
       "transform-vue-jsx",
       "@babel/plugin-transform-runtime",
-      "@babel/plugin-syntax-dynamic-import",
+      "@babel/plugin-syntax-dynamic-import"
     ]
   }
