--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "cross-env NODE_ENV=production webpack --config ./builder/webpack.conf.prod.js --progress --mode production",
+    "release": "cross-env NODE_ENV=production webpack --config ./builder/webpack.prod.conf.js --progress --mode production",
     "dev": "cross-env NODE_ENV=development webpack serve --mode development --config=./builder/webpack.dev.conf.js",
     "loc-dev": "cross-env NODE_ENV=location webpack serve --config=./builder/webpack.dev.conf.js --mode development",
     "devh": "nodemon ./builder/test.js"
